# cpp_project

./: .gitignore  CMakeLists.txt  CPP_PROJECTConfig.h  CPP_PROJECTConfig.h.in  License.txt  build.sh  configure.sh  install.sh  main.cpp  readme.md  run.sh
sdk/cpp/: CMakeLists.txt  adder.cpp  adder.h
