cmake_minimum_required(VERSION 3.13)

project(CPP_PROJECT VERSION 1.0)

configure_file(${PROJECT_NAME}Config.h.in ${PROJECT_NAME}Config.h)

add_executable(${PROJECT_NAME} main.cpp)

target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_BINARY_DIR})

# ---------------- DOWNLOAD ALL THE SUBMODULES ------------------
find_package(Git QUIET)
if(GIT_FOUND AND EXISTS "${PROJECT_SOURCE_DIR}/.git")
    # Update submodules as needed
    option(GIT_SUBMODULE "Check submodules during build" ON)
    if(GIT_SUBMODULE)
        message(STATUS "Submodule update")
        execute_process(COMMAND ${GIT_EXECUTABLE} submodule update --init --recursive
            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
            RESULT_VARIABLE GIT_SUBMOD_RESULT)
        if(NOT GIT_SUBMOD_RESULT EQUAL "0")
            message(FATAL_ERROR "git submodule update --init failed with ${GIT_SUBMOD_RESULT}, please checkout submodules")
        endif()
    endif()
endif()

add_subdirectory(sdk/cpp)

add_subdirectory(external/glfw)

target_include_directories(${PROJECT_NAME} 
    PRIVATE sdk/app
    PRIVATE external/glfw/include)

target_link_directories(${PROJECT_NAME} 
    PRIVATE sdk/app
    PRIVATE external/glfw/src)

target_link_libraries(${PROJECT_NAME} basicmath glfw)
